# omni-chat

./: .gitignore  Cargo.toml  README.md  install.sh  wayland-app-id-proxy.py
.github/workflows/: build.yml
crates/omnichat-app/: Cargo.toml
crates/omnichat-app/src/: app.rs  client.rs  main.rs  notification.rs  settings.rs  tray.rs
crates/omnichat-app/src/db/: mod.rs  queries.rs  schema.rs
crates/omnichat-app/src/handlers/: display.rs  life_span.rs  load.rs  mod.rs  request.rs
crates/omnichat-app/src/ipc/: handler.rs
crates/omnichat-app/src/recipe/: injector.rs  loader.rs  mod.rs  model.rs  shim.js
crates/omnichat-app/src/service/: config.rs  lifecycle.rs  manager.rs  mod.rs  state.rs
crates/omnichat-helper/: Cargo.toml
crates/omnichat-helper/src/: main.rs
resources/: settings.html  sidebar.css  sidebar.html
