[workspace]
resolver = "2"
members = [
    "crates/omnichat-app",
    "crates/omnichat-helper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cef = { version = "145", features = ["build-util"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
notify-rust = "4"
tray-icon = "0.19"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dirs-next = "2"
open = "5"
flate2 = "1"
libc = "0.2"

[workspace.dependencies.gtk]
version = "0.18"
features = []

[profile.release]
codegen-units = 16
lto = "thin"
strip = true
